--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.5.1",
+    "eslint-config-airbnb": "^18.0.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.3",
     "hash.js": "^1.1.7",
+    "prettier": "^1.18.2",
     "react": "16.8.6",
     "react-native": "0.60.4",
     "react-native-gesture-handler": "^1.3.0",
@@ -25,7 +32,7 @@
     "@babel/runtime": "7.5.5",
     "@react-native-community/eslint-config": "0.0.3",
     "babel-jest": "24.8.0",
-    "eslint": "6.0.1",
+    "eslint": "^6.0.1",
     "jest": "24.8.0",
     "metro-react-native-babel-preset": "0.54.1",
     "react-test-renderer": "16.8.6"
